Updated scripted locs of priests

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -3682,11 +3682,9 @@ building_tec_factory_gestalt: "\n§HThis building will swap half of the £job_fo
 
 # hab
 
-tec_mercantile_commercial_enterprise_needs_t2_hab:
-"§HDue to unsuficient infrastructure, $job_merchant_plural$ are not available until we upgrade the habitat.§!"
+tec_mercantile_commercial_enterprise_needs_t2_hab: "§HDue to unsuficient infrastructure, $job_merchant_plural$ are not available until we upgrade the habitat.§!"
 
-tec_mercantile_commercial_enterprise_gestalt_needs_t2_hab:
-"§HDue to unsuficient infrastructure, $job_tec_trade_drone_plural$ are not available until we upgrade the habitat.§!"
+tec_mercantile_commercial_enterprise_gestalt_needs_t2_hab: "§HDue to unsuficient infrastructure, $job_tec_trade_drone_plural$ are not available until we upgrade the habitat.§!"
 
 # Assembly Localization
 
@@ -3698,6 +3696,36 @@ mod_tec_assembly_prohibited_no_cyborg: "§RNo $tec_loc_biological_assembly$ prov
 mod_tec_assembly_prohibited_no_cyborg_short: ""
 mod_tec_assembly_prohibited_no_hive: "§RNo $tec_loc_biological_assembly$ provided as assembling species is not Hive Minded§!"
 mod_tec_assembly_prohibited_no_hive_short: ""
+
+# Admin locs
+
+job_tec_mecha_priest_icon: "£job_tec_mecha_priest£"
+job_tec_paperwork_priest_icon: "£job_tec_paperwork_priest£"
+job_tec_atom_priest_icon: "£job_tec_atom_priest£"
+job_tec_paranormal_priest_icon: "£job_tec_paranormal_priest£"
+
+job_manager_icon: "£job_manager£"
+job_bureaucrat_icon: "£job_bureaucrat£"
+job_tec_ai_operat3686or_icon: "£job_tec_ai_operator£"
+job_tec_ai_ordinator_icon: "£job_tec_ai_ordinator£"
+
+job_tec_resonance_drone_icon: "£job_tec_resonance_drone£"
+job_synapse_drone_icon: "£job_synapse_drone£"
+job_tec_network_drone_icon: "£job_tec_network_drone£"
+
+
+tec_job_priest_and_admin_with_icon: "[GetPriestIcon] [GetPriest] and [GetAdministratorNoPriestIcon] [GetAdministratorNoPriest]"
+
+tec_job_priest_and_admin_plural_with_icon: "[GetPriestIcon] [GetPriestPlural] and [GetAdministratorNoPriestIcon] [GetAdministratorNoPriestPlural]"
+
+tec_job_admin_with_icon: "[GetAdministratorNoPriestIcon] [GetAdministratorNoPriest]"
+
+tec_job_admin_plural_with_icon: "[GetAdministratorNoPriestIcon] [GetAdministratorNoPriestPlural]"
+
+tec_job_synapse_with_icon: "[GetSynapseIcon] [GetSynapse]"
+
+tec_job_synapse_plural_with_icon: "[GetSynapseIcon] [GetSynapsePlural]"
+
 
 # Eco cats
 leader_rulers: "Rulers"
