--- a/localisation/english/zz_evolved_decisions_l_english.yml
+++ b/localisation/english/zz_evolved_decisions_l_english.yml
@@ -329,12 +329,12 @@ decision_tec_exocolonist_awake_secondary_effects:0 "Awake a secondary species po
 # Machine Capitals
  decision_tec_machine_extraction_capital:0 "Capital - Automated Extraction"
  decision_tec_machine_extraction_capital_desc:0 "By using our own automation technology we can make this colony an automated extraction world which will boost our basic production and reduce our logistic costs exponentially."
- decision_tooltip_tec_machine_extraction_capital_requirements:0 "£trigger_no£§RRequires no £district£ Habitation or £alloys£ £consumer_goods£ Industrial districts built on the planet.§!"
+ decision_tooltip_tec_machine_extraction_capital_requirements:0 "£trigger_no£ §RRequires no £district£ Habitation or £alloys£ £consumer_goods£ Industrial districts built on the planet.§!"
  decision_tooltip_tec_machine_extraction_capital_effects:0 "The planet £building£ Nexus capital will be replaced by a £district£ Extraction Nexus, making £trigger_tec_basic_resources£ Menial Production Districts §YAutomated§!, producing passive resources at the cost of losing £housing£ §RHousing§! and available jobs, and £job_replicator£ §RCapital Assembly§!."
 
  decision_tec_machine_production_capital:0 "Capital - Centralized Production"
  decision_tec_machine_production_capital_desc:0 "By centralizing processing units on this capital we can directly improve our advanced production, assigning efficient lines and increasing costs/benefits in a exponential scale."
- decision_tooltip_tec_machine_production_capital_requirements:0 "£trigger_no£§RRequires no £trigger_tec_basic_resources£ Basic Resource Production £districts£ Districts or £buildings£ Buildings on the planet.§!"
+ decision_tooltip_tec_machine_production_capital_requirements:0 "£trigger_no£ §RRequires no £trigger_tec_basic_resources£ Basic Resource Production £district£ Districts or £building£ Buildings on the planet.§!"
  decision_tooltip_tec_machine_production_capital_effects:0 "The planet £building£ Nexus capital will be replaced by a £district£ Production Nexus, greatly increasing £job£ §YComplex Drone§! Output and Upkeep, at the cost of losing £job_replicator£ §RCapital Assembly§! and access to £trigger_tec_basic_resources£ §RMenial Production Districts§!."
 
  decision_tec_machine_normal_capital:0 "Capital - Standard Production"
