--- a/localisation/english/zz_evolved_ships_armies_l_english.yml
+++ b/localisation/english/zz_evolved_ships_armies_l_english.yml
@@ -165,13 +165,13 @@
  tec_biopsi_elite_army_desc:0 "TO DO."
 
 # ------------------------------------------------- Cyberpsi
- tec_cyberpsi_army:0 "Psiotic Berserker"
- tec_cyberpsi_army_plural:0 "Psiotics Berserkers"
- tec_cyberpsi_army_desc:0 "These augmented cyborgs are infused with highly psiorreactive substances, increasing their performance and aggresiviness in battle."
+ tec_cyberpsionic_army:0 "Psiotic Berserker"
+ tec_cyberpsionic_army_plural:0 "Psiotics Berserkers"
+ tec_cyberpsionic_army_desc:0 "These augmented cyborgs are infused with highly psiorreactive substances, increasing their performance and aggresiviness in battle."
 
- tec_cyberpsi_elite_army:0 "Ascended Cyberpsyker"
- tec_cyberpsi_elite_army_plural:0 "Ascended Cyberpsykers"
- tec_cyberpsi_elite_army_desc:0 "TO DO."
+ tec_cyberpsionic_elite_army:0 "Ascended Cyberpsyker"
+ tec_cyberpsionic_elite_army_plural:0 "Ascended Cyberpsykers"
+ tec_cyberpsionic_elite_army_desc:0 "TO DO."
 
 # ------------------------------------------------- Machine
  tec_machine_army:0 "Replicant Army"
