--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -793,14 +793,16 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  TRAIT_TEC_REPLICANT_LASTGEN_EFFECT:0 "£pop£ Habitability: §R+100%§!\n£pop£ Jobs production: §R+10%§!\nLeaders are §YImmortal§!.\n"
 
 # cyb cyb cyb
- mod_trait_tec_replicant_main_tooltip:0 "[tec_trait_replicant_module_block][trait_tec_cybernetic_module_block_1][tec_trait_replicant_submodule_block][trait_tec_cybernetic_submodule_block_1]"
+ mod_trait_tec_replicant_main_tooltip:0 "[tec_trait_replicant_module_block][trait_tec_replicant_cybernetic_submodule_block_1][tec_trait_replicant_submodule_block]"
 
- tec_trait_replicant_module_versatility:0 ""
- tec_trait_replicant_module_research:0 ""
- tec_trait_replicant_module_industrial:0 ""
- tec_trait_replicant_submodule_mega_habitability:0 ""
- tec_trait_replicant_submodule_medium_habitability:0 ""
- tec_trait_replicant_submodule_amenities:0 ""
+ tec_trait_replicant_module_fallback:0 "$trait_tec_cybernetic_module_versatility$"
+ tec_trait_replicant_module_versatility:0 "$trait_tec_cybernetic_module_versatility$"
+ tec_trait_replicant_module_research:0 "$trait_tec_cybernetic_module_research$"
+ tec_trait_replicant_module_industrial:0 "$trait_tec_cybernetic_module_industrial$"
+ tec_trait_replicant_submodule_upgraded:0 "Habitability: §G+100%§!\nReplicant traits are §YUpgraded§!\n§RCannot reproduce naturally§!\n§GImmortal§!"
+ tec_trait_replicant_submodule_standard:0 "Habitability: §G+80%§!\n§GImmortal§!"
+ tec_trait_replicant_submodule_combined:0 "Habitability: §G+80%§!\nPop Growth and Assembly Speed: §G+25%§!\nReplicant trait cost: §G-1§!\n§GImmortal§!"
+
 # £mod_habitability_floor_add£
  #trait_tec_cybernetic_module_fallback:0 "$tec_loc_job_output$ per $tec_loc_capital_tier$: §G+3.5%§!\n"
  # tec_blank
@@ -838,42 +840,49 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
 
  trait_tec_replicant_brain:0 "Neural hybridation"
  trait_tec_replicant_brain_desc:0 "§LNanoprocessors and nano memory storages complement natural neural activities, creating a network of cooperative cognitive and intellectual interchanges, greatly enhancing this species intellect and creativity.§!"
+ mod_trait_tec_replicant_brain_tooltip:0 "[trait_tec_replicant_brain_block]"
  trait_tec_replicant_brain_effect_standard:0 "£trigger_tec_research£ Research from £job£ Jobs: §G+20%§!\n£unity£ Unity from £job£ Jobs: §G+20%§!"
- trait_tec_replicant_brain_effect_advanced:0 "£trigger_tec_research£ Research from £job_researcher£ [GetResearcherPlural]: §G+1§!\n£unity£ Unity from [GetAdministratorPluralWithIcon]: §G+1§!"
+ trait_tec_replicant_brain_effect_upgraded:0 "£trigger_tec_research£ Research from £job_researcher£ [GetResearcherPlural]: §G+1§!\n£unity£ Unity from [GetAdministratorPluralWithIcon]: §G+1§!"
 
  trait_tec_replicant_body:0 "Augmented Physique"
  trait_tec_replicant_body_desc:0 "§LA perfect bodily composition, paired with a really efficient metabolism and a impervious health and efficient usage and recyclement of resources makes this species have a close to perfect body.§!"
+ mod_trait_tec_replicant_body_tooltip:0 "[trait_tec_replicant_body_block]"
  trait_tec_replicant_body_effect_standard:0 "$MOD_POP_AMENITIES_USAGE_MULT$: §G-15%§!\n$mod_planet_pops_upkeep_mult$: §G-10%§!"
- trait_tec_replicant_body_effect_advanced:0 "$MOD_POP_AMENITIES_USAGE_MULT$: §G-25%§!\n$mod_planet_pops_upkeep_mult$: §G-20%§!"
+ trait_tec_replicant_body_effect_upgraded:0 "$MOD_POP_AMENITIES_USAGE_MULT$: §G-25%§!\n$mod_planet_pops_upkeep_mult$: §G-20%§!"
 
  trait_tec_replicant_habitability:0 "Adaptable Nanocells"
  trait_tec_replicant_habitability_desc:0 "§LIntelligent biosynthetic measures allow a high degree of adaptation for this replicant species, modifying physionomy, capacities and the whole organism for with the environment.§!"
+ mod_trait_tec_replicant_habitability_tooltip:0 "[trait_tec_replicant_habitability_block]"
  trait_tec_replicant_habitability_effect_standard:0 "£mod_pop_environment_tolerance£ §Y$MOD_HABITABILITY_FLOOR$§!: §G+25%§!\nReplicant pops gain a production effect based on the planet §HClimate§! or §HType§!"
- trait_tec_replicant_habitability_effect_advanced:0 "£mod_pop_environment_tolerance£ §Y$MOD_HABITABILITY_FLOOR$§!: §G+50%§!\nReplicant pops gain a production effect based on the planet §HClimate§! or §HType§!"
+ trait_tec_replicant_habitability_effect_upgraded:0 "£mod_pop_environment_tolerance£ §Y$MOD_HABITABILITY_FLOOR$§!: §G+50%§!\nReplicant pops gain a production effect based on the planet §HClimate§! or §HType§!"
 
 	# growth speed and assembly speed
  trait_tec_replicant_universal:0 "Universal Template"
  trait_tec_replicant_universal_desc:0 "§LConstant actuators and a resilient genetic and programming code allows a really effective reproductive rate, either being natural, forced cloning or enhanced development.§!"
+ mod_trait_tec_replicant_universal_tooltip:0 "[trait_tec_replicant_universal_block]"
  trait_tec_replicant_universal_effect_standard:0 "Pop growth: §G+20%§!\nPop Assembly Speed: §G+20%§!"
- trait_tec_replicant_universal_effect_advanced:0 "Pop Assembly Speed: §G+40%§!"
+ trait_tec_replicant_universal_effect_upgraded:0 "Pop Assembly Speed: §G+40%§!"
 
 	# Budding
  trait_tec_replicant_budding:0 "Enhanced Bioprinting"
  trait_tec_replicant_budding_desc:0 "§LSeveral nanocomposites and biomechanical adaptations allow a flexible method of reproduction by direct pseudo-replication of the original template of this species.§!"
+ mod_trait_tec_replicant_budding_tooltip:0 "[trait_tec_replicant_budding_block]" 
  trait_tec_replicant_budding_effect_standard:0 "Each replicant pop working as a slave or better produces §G0.025§! £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
- trait_tec_replicantbudding_effect_advanced:0 "Each replicant pop working as a slave or better produces §G0.05§! £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
+ trait_tec_replicant_budding_effect_upgraded:0 "Each replicant pop working as a slave or better produces §G0.05§! £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
 
 	# +10% basic and industrial resources
  trait_tec_replicant_capacitor:0 "Nano-Capacitors"
  trait_tec_replicant_capacitor_desc:0 "§LAdapted inside normally hollow micro cavities of the body, this species has a myriad of specifically designed nanites integrated with computing, work and development spaces.§!"
+ mod_trait_tec_replicant_capacitor_tooltip:0 "[trait_tec_replicant_capacitor_block]"
  trait_tec_replicant_capacitor_effect_standard:0 "Resources from Jobs: §G+10%§!\nUpkeep from Jobs: §G-10%§!"
- trait_tec_replicant_capacitor_effect_advanced:0 "Each Replicant pop provides §G+0.25%§! job output to the planet\nUpkeep from Jobs: §G-10%§!"
+ trait_tec_replicant_capacitor_effect_upgraded:0 "Each Replicant pop provides §G+0.25%§! job output to the planet\nUpkeep from Jobs: §G-10%§!"
 
 	# army damage army health allows replicant armies
  trait_tec_replicant_warfare:0 "Bio-Warform"
  trait_tec_replicant_warfare_desc:0 "§LImprinted combat capacities, external layers of nano-dermis and a overclocked cyber-biological organs, with also integrated weapons and modular capacities make this species a deadly powerhouse, able to overcome any regular opponent.§!"
+ mod_trait_tec_replicant_warfare_tooltip:0 "[trait_tec_replicant_warfare_block]"
  trait_tec_replicant_warfare_effect_standard:0 "Army Damage: §G+25%§!\nArmy Health: §G+25%§!\nArmy Morale Damage: §G+25%§!"
- trait_tec_replicant_warfare_effect_advanced:0 "Army Damage: §G+25%§!\nArmy Health: §G+25%§!\nArmy Morale Damage: §G+25%§!"
+ trait_tec_replicant_warfare_effect_upgraded:0 "Army Damage: §G+25%§!\nArmy Health: §G+25%§!\nArmy Morale Damage: §G+25%§!"
 
 # --------------- MACHINE ASCENSION TRAITS ----------------------
 # Advanced robot traits
