--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -1058,8 +1058,43 @@ TRAIT_TEC_ROBOT_LIQUID_EFFECT:0 "$mod_planet_jobs_produces_mult$: §G+10%§!\nAr
 
  trait_tec_biopsionic:0 "Psionic Purity"
  trait_tec_biopsionic_desc:0 "§LHarmony of body, mind and soul, reached in the purest of forms.§!"
- #trait_tec_biopsionic_hive:0 "Psionic Purity"
- #trait_tec_biopsionic_hive_desc:0 "§LHarmony of body, mind and will, reached in the purest of forms.§!"
+
+ mod_trait_tec_biopsionic_tooltip:0 "[trait_tec_biopsionic_main_module][trait_tec_biopsionic_secondary_module]"
+
+ trait_tec_biopsionic_main_module_fallback:0 "$mod_planet_jobs_produces_mult$: §G+15%§!\n"
+ trait_tec_biopsionic_main_module_production:0"$mod_planet_jobs_produces_mult$: §G+25%§!\n"
+ trait_tec_biopsionic_main_module_growth:0 "$mod_planet_jobs_produces_mult$: §G+15%§!\nPop Growth and Assembly Speed: §G+15%§!\n"
+
+ trait_tec_biopsionic_secondary_module_fallback:0 "$mod_planet_pops_upkeep_mult$: §G-15%§!\n"
+ trait_tec_biopsionic_secondary_module_upkeep:0 "$mod_planet_jobs_upkeep_mult$: §G-10%§!\n"
+ trait_tec_biopsionic_secondary_module_amenities:0 "$mod_pop_amenities_usage_mult$: §G-15%§!\n"
+
+ trait_tec_biopsionic_leader_module_fallback:0 "\n§GImmortal§!"
+# 
+ #mod_trait_tec_cybernetic_tooltip:0 "[trait_tec_cybernetic_module_block_1][trait_tec_cybernetic_module_block_2][trait_tec_cybernetic_submodule_block_1][trait_tec_cybernetic_submodule_block_2][trait_tec_cybernetic_leader_block]"
+
+ # tec_blank
+ #trait_tec_cybernetic_module_fallback:0 "$MOD_ARMY_DAMAGE_MULT$: §G+15%§!\n"
+ #trait_tec_cybernetic_module_versatility:0 "$mod_planet_jobs_produces_mult$ per $tec_loc_capital_tier$: §G+3.5%§!\n"
+ #trait_tec_cybernetic_module_research:0 "$mod_planet_researchers_all_research_produces_add$ per $tec_loc_capital_tier$: §G+0.15§!\n"
+ #trait_tec_cybernetic_module_industrial:0 "$mod_planet_industrial_jobs_all_industrial_produces_add$ per $tec_loc_capital_tier$: §G+0.15§!\n"
+
+ #trait_tec_cybernetic_submodule_fallback:0 "$MOD_LEADER_AGE$: §G+25 years§!\n"
+ #trait_tec_cybernetic_submodule_lifespan:0 "$trait_tec_cybernetic_submodule_fallback$"
+ #trait_tec_cybernetic_submodule_warfare:0 "$MOD_ARMY_DAMAGE_MULT$: §G+15%§!\n"
+ #trait_tec_cybernetic_submodule_survival:0 "Army Health: §G+20%§!\n"
+ #trait_tec_cybernetic_submodule_recycling:0 "$mod_planet_pops_upkeep_mult$: §G-10%§!\n"
+ #trait_tec_cybernetic_submodule_construction:0 "$MOD_PLANET_BUILDING_BUILD_SPEED_MULT$ per Pop: §G+1%§!\n"
+ #trait_tec_cybernetic_submodule_knowledge:0 "$MOD_LEADER_SPECIES_EXP_GAIN$: §G+25%§!\n"
+
+ #trait_tec_cybernetic_leader_fallback:0 "§GLeaders from this species have additional traits and bonuses§!"
+ #trait_tec_cybernetic_leader_versatility:0 "$trait_tec_cybernetic_leader_fallback$"
+ #trait_tec_cybernetic_leader_research:0 "§GLeaders from this species have additional traits and bonuses, based around Tecnological capacities§!"
+ #trait_tec_cybernetic_leader_industrial:0 "§GLeaders from this species have additional traits and bonuses, based around Industral capacities§!"
+ #trait_tec_cybernetic_leader_versatility_industrial:0 "§GLeaders from this species have additional traits and bonuses§!"
+ #trait_tec_cybernetic_leader_versatility_research:0 "§GLeaders from this species have additional traits and bonuses, uniting Technological and Versatile capacities§!"
+ #trait_tec_cybernetic_leader_industrial_research:0 "§GLeaders from this species have additional traits and bonuses, uniting Experimental and Efficient capacities§!"
+# /
 
  trait_tec_biopsionic_embroidered:0 "Embroidered Minds"
  trait_tec_biopsionic_embroidered_desc:0 "§LA kind of strong biopsionic link unites all the members of this species, far beyond what any kind of naturally biological, psionically gifted or artificially engineered creates, sharing knowledge, experiences and feelings.§!"
@@ -1346,20 +1381,20 @@ TRAIT_SYMBIOTIC_EFFECT:0 "$MOD_POP_HAPPINESS$: §G+20%§!\n$MOD_LEADER_SKILL_LEV
 
 
 # Purity of form
- leader_trait_admiral_tec_pure_psionic:0 "Pure of Form"
- leader_trait_admiral_tec_pure_psionic_desc:0 "§LWith a incredible biological and psionic prowess, this admiral shows extreme dextery in naval scenarios, able to turn the tides of the battle by itself.§!"
+ leader_trait_admiral_tec_biopsionic:0 "Pure of Form"
+ leader_trait_admiral_tec_biopsionic_desc:0 "§LWith a incredible biological and psionic prowess, this admiral shows extreme dextery in naval scenarios, able to turn the tides of the battle by itself.§!"
 
- leader_trait_general_tec_pure_psionic:0 "Pure of Form"
- leader_trait_general_tec_pure_psionic_desc:0 "§LWith a incredible biological and psionic prowess, this general shows extreme dextery in combat, showing unimaginable powers.§!"
+ leader_trait_general_tec_biopsionic:0 "Pure of Form"
+ leader_trait_general_tec_biopsionic_desc:0 "§LWith a incredible biological and psionic prowess, this general shows extreme dextery in combat, showing unimaginable powers.§!"
 
- leader_trait_governor_tec_pure_psionic:0 "Pure of Form"
- leader_trait_governor_tec_pure_psionic_desc:0 "§LWith a incredible biological and psionic prowess, this governor has extensive control of any administrative task.§!"
+ leader_trait_governor_tec_biopsionic:0 "Pure of Form"
+ leader_trait_governor_tec_biopsionic_desc:0 "§LWith a incredible biological and psionic prowess, this governor has extensive control of any administrative task.§!"
 
- leader_trait_ruler_tec_pure_psionic:0 "Pure of Form"
- leader_trait_ruler_tec_pure_psionic_desc:0 "§LWith a incredible biological and psionic prowess, this ruler has extensive abilities for natural control of the empire.§!"
+ leader_trait_ruler_tec_biopsionic:0 "Pure of Form"
+ leader_trait_ruler_tec_biopsionic_desc:0 "§LWith a incredible biological and psionic prowess, this ruler has extensive abilities for natural control of the empire.§!"
 
- leader_trait_scientist_tec_pure_psionic:0 "Pure of Form"
- leader_trait_scientist_tec_pure_psionic_desc:0 "§LWith a incredible biological and psionic prowess, this scientist has extensive capabilities in the research field.§!"
+ leader_trait_scientist_tec_biopsionic:0 "Pure of Form"
+ leader_trait_scientist_tec_biopsionic_desc:0 "§LWith a incredible biological and psionic prowess, this scientist has extensive capabilities in the research field.§!"
 
 # Cyberpsionic
  leader_trait_admiral_tec_cyberpsionic:0 "Infused Cybernetics"
