--- a/localisation/english/zz_evolved_civics_l_english.yml
+++ b/localisation/english/zz_evolved_civics_l_english.yml
@@ -374,7 +374,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 # ------------------------------------------------------------
  civic_tec_capitalized_innovation:0 "Capitalized Innovation"
  civic_tec_capitalized_innovation_desc:0 "The constant competition between laboratories and private research industries is a process that has greatly benefited this empire, as it converted into acquisition of better and most affordable research associates."
- civic_tooltip_capitalized_innovation_effects:0 "$mod_planet_researchers_trade_value_produces_add$: §G+3§!"
+ civic_tooltip_capitalized_innovation_effects:0 "$tec_loc_trade_value$ from £job_researcher£ $job_researcher_plural$: §G+3§!"
 
 
  # former civic_ultimate_collective
@@ -993,7 +993,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 
  civic_tec_hive_menial_lithoid:0 "Lithospheric Harmony"
  civic_tec_hive_menial_lithoid_desc:0 "This Hive Mind has a natural instinct that drives it to the search of the most optimal mineral veins and harvestable terrain, creating a natural chain of production/waste where it can shape and nurture drones at a more than favourable rate compared with the time of processing and extracting natural resources."
- civic_tooltip_tec_hive_menial_lithoid_effects:0 "£district£ §Y$district_hive$§! districts provide §G1§! extra £job_mining_drone£ §Y$job_mining_drone$§! job.\n\n§!$tec_loc_amenities$ from £job_mining_drone£ $job_mining_drone_plural$: §G+1§!"
+ civic_tooltip_tec_hive_menial_lithoid_effects:0 "£district£ §Y$district_hive$§! districts provide §G1§! extra £job_mining_drone£ §Y$job_mining_drone$§! job.\n\n$tec_loc_amenities$ from £job_mining_drone£ $job_mining_drone_plural$: §G+1§!"
 
  civic_tec_hive_functional_architecture:0 "Filigree Stricturing"
  civic_tec_hive_functional_architecture_desc:0 "The delicacy and work dedicated by each drone to the structural planning and execution of this gestalt conciousness architecture is monumental, reaching degrees of construction, timings and efficiency generally out of possible predictions."
