Enabled cyberpsionic - some loc/features remaining

--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -1144,9 +1144,19 @@ TRAIT_TEC_ROBOT_LIQUID_EFFECT:0 "$mod_planet_jobs_produces_mult$: §G+10%§!\nAr
  trait_tec_cyberpsionic:0 "Infused Cybernetics"
  trait_tec_cyberpsionic_desc:0 "§LThis species has achieved an exotic combination; Using cybernetics they harness and unlock their psionic potential by completely overcharging both their bodies and their minds.§!"
  TRAIT_TEC_CYBERPSIONIC_EFFECT:0 "£trigger_tec_research£ Research Output: §G+20%§!\nLeader Experience Gain: §G+25%§!\n£energy£ Energy Upkeep: §R+0.4§!"
+ # Versatile
+ # 25 years lifespan
+ # psionic produces mult
+ # leader thingie
+ mod_trait_tec_cyberpsionic_tooltip:0 "[trait_tec_cybernetic_module_block_1][trait_tec_cybernetic_submodule_block_1][trait_tec_cyberpsionic_module_block_1][trait_tec_cybernetic_leader_block]"
+# 
+ trait_tec_cyberpsionic_module_fallback:0 "$mod_planet_pops_psionic_produces_mult$: §G+10%§!\n"
+ trait_tec_cyberpsionic_module_entropy:0 "$mod_planet_pops_psionic_produces_mult$: §G+15%§!\nPop Growth and Assembly Speed: §R-5%§!\n"
+ trait_tec_cyberpsionic_module_harmony:0 "$mod_planet_pops_psionic_produces_mult$: §G+15%§!\n"
+# /
 
  trait_tec_cyberpsionic_power:0 "Might Implants"
- trait_tec_cyberpsionic_power_desc:0 "§LUsing advanced cybernetic implants as a funnel for shroud energy, this psionically gifted species is able to control, manifest and project it for any intensive use, even powering their own self.§!"
+ trait_tec_cyberpsionic_power_desc:0 "§LUsing advanced cybernetic implants as a funnel for psionic energy, this psionically gifted species is able to control, manifest and project it for any intensive use, even powering their own self.§!"
  trait_tec_cyberpsionic_POWER_EFFECT:0 "Job Upkeep: §G-10%§!\nArmy Damage and Health: §G+25%§!\n\nNaval and Army jobs provide §G2§! extra £unity£ unity.§!"
 
  trait_tec_cyberpsionic_equilibrium:0 "Equilibrium Implants"
@@ -1154,7 +1164,7 @@ TRAIT_TEC_ROBOT_LIQUID_EFFECT:0 "$mod_planet_jobs_produces_mult$: §G+10%§!\nAr
  trait_tec_cyberpsionic_EQUILIBRIUM_EFFECT:0 "Job Output: §G+5%§!\nRuler jobs provide §G+0.5§! £stability£ stability each.\nGestalt governors provide +5 stability as extra trait."
 
  trait_tec_cyberpsionic_control:0 "Control Implants"
- trait_tec_cyberpsionic_control_desc:0 "§LHarnessing the power of the shroud, channeled through the mind and technology of this species, ample waves of soothing and subduing waves calm the entire population of this species, making them better, more loyal and obliging towards the empire.§!"
+ trait_tec_cyberpsionic_control_desc:0 "§LHarnessing the power of psionic capacities, channeled through the mind and technology of this species, ample waves of soothing and subduing waves calm the entire population of this species, making them better, more loyal and obliging towards the empire.§!"
  trait_tec_cyberpsionic_CONTROL_EFFECT:0 "£job_enforcer£ Anti-Crime jobs provide §G+1%§! pop output each.\nGoverning ethic attraction §G+25%§!."
 
  trait_tec_cyberpsionic_endoskeleton:0 "Warp Endoskeleton"
