--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -1150,9 +1150,9 @@ TRAIT_TEC_ROBOT_LIQUID_EFFECT:0 "$mod_planet_jobs_produces_mult$: §G+10%§!\nAr
  # leader thingie
  mod_trait_tec_cyberpsionic_tooltip:0 "[trait_tec_cybernetic_module_block_1][trait_tec_cybernetic_submodule_block_1][trait_tec_cyberpsionic_module_block_1][trait_tec_cybernetic_leader_block]"
 # 
- trait_tec_cyberpsionic_module_fallback:0 "$mod_planet_pops_psionic_produces_mult$: §G+10%§!\n"
- trait_tec_cyberpsionic_module_entropy:0 "$mod_planet_pops_psionic_produces_mult$: §G+15%§!\nPop Growth and Assembly Speed: §R-5%§!\n"
- trait_tec_cyberpsionic_module_harmony:0 "$mod_planet_pops_psionic_produces_mult$: §G+15%§!\n"
+ trait_tec_cyberpsionic_module_fallback:0 "$mod_planet_psionic_jobs_produces_mult$: §G+10%§!\n"
+ trait_tec_cyberpsionic_module_entropy:0 "$mod_planet_psionic_jobs_produces_mult$: §G+15%§!\n$tec_loc_pop_growth$ and $tec_loc_biological_assembly$: §R-5%§!\n"
+ trait_tec_cyberpsionic_module_harmony:0 "$mod_planet_psionic_jobs_produces_mult$: §G+15%§!\n"
 # /
 
  trait_tec_cyberpsionic_power:0 "Might Implants"
@@ -1161,23 +1161,23 @@ TRAIT_TEC_ROBOT_LIQUID_EFFECT:0 "$mod_planet_jobs_produces_mult$: §G+10%§!\nAr
 
  trait_tec_cyberpsionic_equilibrium:0 "Equilibrium Implants"
  trait_tec_cyberpsionic_equilibrium_desc:0 "§LVia complicated psiotechnological implants, the highest and more responsible members of this society are able to amplify psionic signals towards the entire population, helping the development and growth of every member interconnected.§!"
- trait_tec_cyberpsionic_EQUILIBRIUM_EFFECT:0 "Job Output: §G+5%§!\nRuler jobs provide §G+0.5§! £stability£ stability each.\nGestalt governors provide +5 stability as extra trait."
+ trait_tec_cyberpsionic_EQUILIBRIUM_EFFECT:0 "$tec_loc_stability$ from $mod_base_pop_category_rulers$: §G+0.5§!\n\nGestalt Governors provide +5 stability as extra trait."
 
  trait_tec_cyberpsionic_control:0 "Control Implants"
  trait_tec_cyberpsionic_control_desc:0 "§LHarnessing the power of psionic capacities, channeled through the mind and technology of this species, ample waves of soothing and subduing waves calm the entire population of this species, making them better, more loyal and obliging towards the empire.§!"
- trait_tec_cyberpsionic_CONTROL_EFFECT:0 "£job_enforcer£ Anti-Crime jobs provide §G+1%§! pop output each.\nGoverning ethic attraction §G+25%§!."
+ trait_tec_cyberpsionic_CONTROL_EFFECT:0 "£job£ Jobs Output from $mod_base_planet_enforcers$: §G+2%§!\n$MOD_POP_GOVERNMENT_ETHIC_ATTRACTION$: §G+25%§!"
 
  trait_tec_cyberpsionic_endoskeleton:0 "Warp Endoskeleton"
  trait_tec_cyberpsionic_endoskeleton_desc:0 "§LUnder their skin, members of this species have advanced cybernetic endoskeletons composed by specifically designed alloys, infunded with exotic materials created from psionic rituals and energy extraction.§!"
- trait_tec_cyberpsionic_ENDOSKELETON_EFFECT:0 "£sr_zro£ Zro Upkeep: §R+0.05§!\n£energy£ Energy Upkeep: §R+0.25§!\n\n§YImproves all types of Cybernetic Implants.§!"
+ trait_tec_cyberpsionic_ENDOSKELETON_EFFECT:0 "$mod_planet_pops_sr_zro_upkeep_add$: §R+0.05§!\n$mod_planet_pops_energy_upkeep_add$: §R+0.25§!\n\n§YImproves all types of Cybernetic Implants.§!"
 
  trait_tec_cyberpsionic_infusion:0 "Dust Inhalers"
  trait_tec_cyberpsionic_infusion_desc:0 "§LUsing refined particles of psionic residuum, this species has specifically designed inhalers to ''stimulate'' their population, amplifying their psionic, mental and bodily capacities.§!"
- trait_tec_cyberpsionic_INFUSION_EFFECT:0 "Resources from £job£ Jobs: §G+5%§!\nArmy Damage and Health: §G+25%§!\n£sr_zro£ Zro Upkeep: §R+0.05§!"
+ trait_tec_cyberpsionic_INFUSION_EFFECT:0 "$mod_planet_pops_sr_zro_upkeep_add$: §R+0.05§!"
 
  trait_tec_cyberpsionic_amplifier:0 "Psiotic Amplifiers"
  trait_tec_cyberpsionic_amplifier_desc:0 "§LBy specific discharges of both energetic and infused psionic material directly to the enhanced nervous systems, this species can greatly develop new levels of cognition and awareness never thought before.§!"
- trait_tec_cyberpsionic_AMPLIFIER_EFFECT:0 "£trigger_tec_research£ Research Output: §G+10%§!\n£unity£ Unity Output: §G+10%§!\n£sr_zro£ Zro Upkeep: §R+0.05§!"
+ trait_tec_cyberpsionic_AMPLIFIER_EFFECT:0 "$mod_planet_pops_sr_zro_upkeep_add$: §R+0.05§!"
 
  # Specific for robots
  trait_tec_cyberpsionic_robot_zro:0 "Entropic Core"
